src/y.output
Terminais sem uso na gramática

    UNARYMINUS


Gramática

    0 $accept: program $end

    1 program: PROGRAM NAME BEGIN decl_list_opt END

    2 decl_list_opt: %empty
    3              | decl_list

    4 decl_list: decl
    5          | decl_list ';' decl

    6 decl: var_decl
    7     | proc_decl
    8     | rec_decl

    9 var_decl: VAR NAME ':' type
   10         | VAR NAME ':' type ASSIGN exp
   11         | VAR NAME ASSIGN exp

   12 proc_decl: PROCEDURE NAME '(' paramfield_list_opt ')' return_type_opt BEGIN proc_body END

   13 proc_body: decl_block_opt stmt_list

   14 decl_block_opt: %empty
   15               | decl_block

   16 decl_block: decl_list IN

   17 rec_decl: STRUCT NAME '{' paramfield_decl_list_opt '}'

   18 paramfield_decl_list_opt: %empty
   19                         | paramfield_decl_list

   20 paramfield_decl_list: paramfield_decl
   21                     | paramfield_decl_list ';' paramfield_decl

   22 paramfield_list_opt: %empty
   23                    | paramfield_list

   24 paramfield_list: paramfield_decl
   25                | paramfield_list ',' paramfield_decl

   26 paramfield_decl: NAME ':' type

   27 stmt_list: %empty
   28          | stmt
   29          | stmt_list ';' stmt

   30 stmt: assign_stmt
   31     | if_stmt
   32     | while_stmt
   33     | for_stmt
   34     | do_until_stmt
   35     | return_stmt
   36     | call_stmt

   37 assign_stmt: var ASSIGN exp
   38            | deref_var ASSIGN exp

   39 if_stmt: IF exp THEN stmt_list else_opt FI

   40 else_opt: %empty
   41         | ELSE stmt_list

   42 while_stmt: WHILE exp DO stmt_list OD

   43 for_stmt: FOR var '=' exp TO exp STEP exp DO stmt_list OD

   44 do_until_stmt: DO stmt_list UNTIL exp OD

   45 return_stmt: RETURN
   46            | RETURN exp

   47 call_stmt: NAME '(' exp_list_opt ')'

   48 exp_list_opt: %empty
   49             | exp_list

   50 exp_list: exp
   51         | exp_list ',' exp

   52 exp: exp AND exp
   53    | exp OR exp
   54    | NOT exp
   55    | exp COMPARISON exp
   56    | exp SUM exp
   57    | exp MINUS exp
   58    | exp DIV exp
   59    | exp MULT exp
   60    | exp EX exp
   61    | literal
   62    | call_stmt
   63    | NEW NAME
   64    | var
   65    | ref_var
   66    | deref_var
   67    | '(' exp ')'

   68 ref_var: REF '(' var ')'

   69 deref_var: DEREF '(' var ')'
   70          | DEREF '(' deref_var ')'

   71 var: NAME
   72    | exp '.' NAME

   73 literal: INT_LITERAL
   74        | FLOAT_LITERAL
   75        | STRING_LITERAL
   76        | BOOL_LITERAL
   77        | NULLVAL

   78 type: INT
   79     | FLOAT
   80     | STRING
   81     | BOOL
   82     | NAME
   83     | REF '(' type ')'

   84 return_type_opt: %empty
   85                | ':' type


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 12 47 67 68 69 70 83
    ')' (41) 12 47 67 68 69 70 83
    ',' (44) 25 51
    '.' (46) 72
    ':' (58) 9 10 26 85
    ';' (59) 5 21 29
    '=' (61) 43
    '{' (123) 17
    '}' (125) 17
    error (256)
    PROGRAM (258) 1
    NAME (259) 1 9 10 11 12 17 26 47 63 71 72 82
    BEGIN (260) 1 12
    END (261) 1 12
    VAR (262) 9 10 11
    PROCEDURE (263) 12
    STRUCT (264) 17
    ASSIGN (265) 10 11 37 38
    IF (266) 39
    THEN (267) 39
    ELSE (268) 41
    FI (269) 39
    WHILE (270) 42
    DO (271) 42 43 44
    OD (272) 42 43 44
    RETURN (273) 45 46
    NEW (274) 63
    REF (275) 68 83
    DEREF (276) 69 70
    IN (277) 16
    FOR (278) 43
    TO (279) 43
    STEP (280) 43
    UNTIL (281) 44
    INT_LITERAL (282) 73
    FLOAT_LITERAL (283) 74
    STRING_LITERAL (284) 75
    BOOL_LITERAL (285) 76
    NULLVAL (286) 77
    INT (287) 78
    FLOAT (288) 79
    STRING (289) 80
    BOOL (290) 81
    OR (291) 53
    AND (292) 52
    NOT (293) 54
    COMPARISON (294) 55
    SUM (295) 56
    MINUS (296) 57
    MULT (297) 59
    DIV (298) 58
    EX (299) 60
    UNARYMINUS (300)


Não terminais com as regras onde eles aparecem

    $accept (55)
        à esquerda: 0
    program (56)
        à esquerda: 1
        à direita: 0
    decl_list_opt (57)
        à esquerda: 2 3
        à direita: 1
    decl_list (58)
        à esquerda: 4 5
        à direita: 3 5 16
    decl (59)
        à esquerda: 6 7 8
        à direita: 4 5
    var_decl (60)
        à esquerda: 9 10 11
        à direita: 6
    proc_decl (61)
        à esquerda: 12
        à direita: 7
    proc_body (62)
        à esquerda: 13
        à direita: 12
    decl_block_opt (63)
        à esquerda: 14 15
        à direita: 13
    decl_block (64)
        à esquerda: 16
        à direita: 15
    rec_decl (65)
        à esquerda: 17
        à direita: 8
    paramfield_decl_list_opt (66)
        à esquerda: 18 19
        à direita: 17
    paramfield_decl_list (67)
        à esquerda: 20 21
        à direita: 19 21
    paramfield_list_opt (68)
        à esquerda: 22 23
        à direita: 12
    paramfield_list (69)
        à esquerda: 24 25
        à direita: 23 25
    paramfield_decl (70)
        à esquerda: 26
        à direita: 20 21 24 25
    stmt_list (71)
        à esquerda: 27 28 29
        à direita: 13 29 39 41 42 43 44
    stmt (72)
        à esquerda: 30 31 32 33 34 35 36
        à direita: 28 29
    assign_stmt (73)
        à esquerda: 37 38
        à direita: 30
    if_stmt (74)
        à esquerda: 39
        à direita: 31
    else_opt (75)
        à esquerda: 40 41
        à direita: 39
    while_stmt (76)
        à esquerda: 42
        à direita: 32
    for_stmt (77)
        à esquerda: 43
        à direita: 33
    do_until_stmt (78)
        à esquerda: 44
        à direita: 34
    return_stmt (79)
        à esquerda: 45 46
        à direita: 35
    call_stmt (80)
        à esquerda: 47
        à direita: 36 62
    exp_list_opt (81)
        à esquerda: 48 49
        à direita: 47
    exp_list (82)
        à esquerda: 50 51
        à direita: 49 51
    exp (83)
        à esquerda: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        à direita: 10 11 37 38 39 42 43 44 46 50 51 52 53 54 55 56 57 58 59 60 67 72
    ref_var (84)
        à esquerda: 68
        à direita: 65
    deref_var (85)
        à esquerda: 69 70
        à direita: 38 66 70
    var (86)
        à esquerda: 71 72
        à direita: 37 43 64 68 69
    literal (87)
        à esquerda: 73 74 75 76 77
        à direita: 61
    type (88)
        à esquerda: 78 79 80 81 82 83
        à direita: 9 10 26 83 85
    return_type_opt (89)
        à esquerda: 84 85
        à direita: 12


Estado 0

    0 $accept: . program $end

    PROGRAM  deslocar, e ir ao estado 1

    program  ir ao estado 2


Estado 1

    1 program: PROGRAM . NAME BEGIN decl_list_opt END

    NAME  deslocar, e ir ao estado 3


Estado 2

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 4


Estado 3

    1 program: PROGRAM NAME . BEGIN decl_list_opt END

    BEGIN  deslocar, e ir ao estado 5


Estado 4

    0 $accept: program $end .

    $padrão  aceitar


Estado 5

    1 program: PROGRAM NAME BEGIN . decl_list_opt END

    VAR        deslocar, e ir ao estado 6
    PROCEDURE  deslocar, e ir ao estado 7
    STRUCT     deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 2 (decl_list_opt)

    decl_list_opt  ir ao estado 9
    decl_list      ir ao estado 10
    decl           ir ao estado 11
    var_decl       ir ao estado 12
    proc_decl      ir ao estado 13
    rec_decl       ir ao estado 14


Estado 6

    9 var_decl: VAR . NAME ':' type
   10         | VAR . NAME ':' type ASSIGN exp
   11         | VAR . NAME ASSIGN exp

    NAME  deslocar, e ir ao estado 15


Estado 7

   12 proc_decl: PROCEDURE . NAME '(' paramfield_list_opt ')' return_type_opt BEGIN proc_body END

    NAME  deslocar, e ir ao estado 16


Estado 8

   17 rec_decl: STRUCT . NAME '{' paramfield_decl_list_opt '}'

    NAME  deslocar, e ir ao estado 17


Estado 9

    1 program: PROGRAM NAME BEGIN decl_list_opt . END

    END  deslocar, e ir ao estado 18


Estado 10

    3 decl_list_opt: decl_list .
    5 decl_list: decl_list . ';' decl

    ';'  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 3 (decl_list_opt)


Estado 11

    4 decl_list: decl .

    $padrão  reduzir usando a regra 4 (decl_list)


Estado 12

    6 decl: var_decl .

    $padrão  reduzir usando a regra 6 (decl)


Estado 13

    7 decl: proc_decl .

    $padrão  reduzir usando a regra 7 (decl)


Estado 14

    8 decl: rec_decl .

    $padrão  reduzir usando a regra 8 (decl)


Estado 15

    9 var_decl: VAR NAME . ':' type
   10         | VAR NAME . ':' type ASSIGN exp
   11         | VAR NAME . ASSIGN exp

    ':'     deslocar, e ir ao estado 20
    ASSIGN  deslocar, e ir ao estado 21


Estado 16

   12 proc_decl: PROCEDURE NAME . '(' paramfield_list_opt ')' return_type_opt BEGIN proc_body END

    '('  deslocar, e ir ao estado 22


Estado 17

   17 rec_decl: STRUCT NAME . '{' paramfield_decl_list_opt '}'

    '{'  deslocar, e ir ao estado 23


Estado 18

    1 program: PROGRAM NAME BEGIN decl_list_opt END .

    $padrão  reduzir usando a regra 1 (program)


Estado 19

    5 decl_list: decl_list ';' . decl

    VAR        deslocar, e ir ao estado 6
    PROCEDURE  deslocar, e ir ao estado 7
    STRUCT     deslocar, e ir ao estado 8

    decl       ir ao estado 24
    var_decl   ir ao estado 12
    proc_decl  ir ao estado 13
    rec_decl   ir ao estado 14


Estado 20

    9 var_decl: VAR NAME ':' . type
   10         | VAR NAME ':' . type ASSIGN exp

    NAME    deslocar, e ir ao estado 25
    REF     deslocar, e ir ao estado 26
    INT     deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    BOOL    deslocar, e ir ao estado 30

    type  ir ao estado 31


Estado 21

   11 var_decl: VAR NAME ASSIGN . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 44
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 22

   12 proc_decl: PROCEDURE NAME '(' . paramfield_list_opt ')' return_type_opt BEGIN proc_body END

    NAME  deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 22 (paramfield_list_opt)

    paramfield_list_opt  ir ao estado 50
    paramfield_list      ir ao estado 51
    paramfield_decl      ir ao estado 52


Estado 23

   17 rec_decl: STRUCT NAME '{' . paramfield_decl_list_opt '}'

    NAME  deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 18 (paramfield_decl_list_opt)

    paramfield_decl_list_opt  ir ao estado 53
    paramfield_decl_list      ir ao estado 54
    paramfield_decl           ir ao estado 55


Estado 24

    5 decl_list: decl_list ';' decl .

    $padrão  reduzir usando a regra 5 (decl_list)


Estado 25

   82 type: NAME .

    $padrão  reduzir usando a regra 82 (type)


Estado 26

   83 type: REF . '(' type ')'

    '('  deslocar, e ir ao estado 56


Estado 27

   78 type: INT .

    $padrão  reduzir usando a regra 78 (type)


Estado 28

   79 type: FLOAT .

    $padrão  reduzir usando a regra 79 (type)


Estado 29

   80 type: STRING .

    $padrão  reduzir usando a regra 80 (type)


Estado 30

   81 type: BOOL .

    $padrão  reduzir usando a regra 81 (type)


Estado 31

    9 var_decl: VAR NAME ':' type .
   10         | VAR NAME ':' type . ASSIGN exp

    ASSIGN  deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 9 (var_decl)


Estado 32

   47 call_stmt: NAME . '(' exp_list_opt ')'
   71 var: NAME .

    '('  deslocar, e ir ao estado 58

    $padrão  reduzir usando a regra 71 (var)


Estado 33

   67 exp: '(' . exp ')'

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 59
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 34

   63 exp: NEW . NAME

    NAME  deslocar, e ir ao estado 60


Estado 35

   68 ref_var: REF . '(' var ')'

    '('  deslocar, e ir ao estado 61


Estado 36

   69 deref_var: DEREF . '(' var ')'
   70          | DEREF . '(' deref_var ')'

    '('  deslocar, e ir ao estado 62


Estado 37

   73 literal: INT_LITERAL .

    $padrão  reduzir usando a regra 73 (literal)


Estado 38

   74 literal: FLOAT_LITERAL .

    $padrão  reduzir usando a regra 74 (literal)


Estado 39

   75 literal: STRING_LITERAL .

    $padrão  reduzir usando a regra 75 (literal)


Estado 40

   76 literal: BOOL_LITERAL .

    $padrão  reduzir usando a regra 76 (literal)


Estado 41

   77 literal: NULLVAL .

    $padrão  reduzir usando a regra 77 (literal)


Estado 42

   54 exp: NOT . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 63
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 43

   62 exp: call_stmt .

    $padrão  reduzir usando a regra 62 (exp)


Estado 44

   11 var_decl: VAR NAME ASSIGN exp .
   52 exp: exp . AND exp
   53    | exp . OR exp
   55    | exp . COMPARISON exp
   56    | exp . SUM exp
   57    | exp . MINUS exp
   58    | exp . DIV exp
   59    | exp . MULT exp
   60    | exp . EX exp
   72 var: exp . '.' NAME

    OR          deslocar, e ir ao estado 64
    AND         deslocar, e ir ao estado 65
    COMPARISON  deslocar, e ir ao estado 66
    SUM         deslocar, e ir ao estado 67
    MINUS       deslocar, e ir ao estado 68
    MULT        deslocar, e ir ao estado 69
    DIV         deslocar, e ir ao estado 70
    EX          deslocar, e ir ao estado 71
    '.'         deslocar, e ir ao estado 72

    $padrão  reduzir usando a regra 11 (var_decl)


Estado 45

   65 exp: ref_var .

    $padrão  reduzir usando a regra 65 (exp)


Estado 46

   66 exp: deref_var .

    $padrão  reduzir usando a regra 66 (exp)


Estado 47

   64 exp: var .

    $padrão  reduzir usando a regra 64 (exp)


Estado 48

   61 exp: literal .

    $padrão  reduzir usando a regra 61 (exp)


Estado 49

   26 paramfield_decl: NAME . ':' type

    ':'  deslocar, e ir ao estado 73


Estado 50

   12 proc_decl: PROCEDURE NAME '(' paramfield_list_opt . ')' return_type_opt BEGIN proc_body END

    ')'  deslocar, e ir ao estado 74


Estado 51

   23 paramfield_list_opt: paramfield_list .
   25 paramfield_list: paramfield_list . ',' paramfield_decl

    ','  deslocar, e ir ao estado 75

    $padrão  reduzir usando a regra 23 (paramfield_list_opt)


Estado 52

   24 paramfield_list: paramfield_decl .

    $padrão  reduzir usando a regra 24 (paramfield_list)


Estado 53

   17 rec_decl: STRUCT NAME '{' paramfield_decl_list_opt . '}'

    '}'  deslocar, e ir ao estado 76


Estado 54

   19 paramfield_decl_list_opt: paramfield_decl_list .
   21 paramfield_decl_list: paramfield_decl_list . ';' paramfield_decl

    ';'  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 19 (paramfield_decl_list_opt)


Estado 55

   20 paramfield_decl_list: paramfield_decl .

    $padrão  reduzir usando a regra 20 (paramfield_decl_list)


Estado 56

   83 type: REF '(' . type ')'

    NAME    deslocar, e ir ao estado 25
    REF     deslocar, e ir ao estado 26
    INT     deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    BOOL    deslocar, e ir ao estado 30

    type  ir ao estado 78


Estado 57

   10 var_decl: VAR NAME ':' type ASSIGN . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 79
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 58

   47 call_stmt: NAME '(' . exp_list_opt ')'

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    $padrão  reduzir usando a regra 48 (exp_list_opt)

    call_stmt     ir ao estado 43
    exp_list_opt  ir ao estado 80
    exp_list      ir ao estado 81
    exp           ir ao estado 82
    ref_var       ir ao estado 45
    deref_var     ir ao estado 46
    var           ir ao estado 47
    literal       ir ao estado 48


Estado 59

   52 exp: exp . AND exp
   53    | exp . OR exp
   55    | exp . COMPARISON exp
   56    | exp . SUM exp
   57    | exp . MINUS exp
   58    | exp . DIV exp
   59    | exp . MULT exp
   60    | exp . EX exp
   67    | '(' exp . ')'
   72 var: exp . '.' NAME

    ')'         deslocar, e ir ao estado 83
    OR          deslocar, e ir ao estado 64
    AND         deslocar, e ir ao estado 65
    COMPARISON  deslocar, e ir ao estado 66
    SUM         deslocar, e ir ao estado 67
    MINUS       deslocar, e ir ao estado 68
    MULT        deslocar, e ir ao estado 69
    DIV         deslocar, e ir ao estado 70
    EX          deslocar, e ir ao estado 71
    '.'         deslocar, e ir ao estado 72


Estado 60

   63 exp: NEW NAME .

    $padrão  reduzir usando a regra 63 (exp)


Estado 61

   68 ref_var: REF '(' . var ')'

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 84
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 85
    literal    ir ao estado 48


Estado 62

   69 deref_var: DEREF '(' . var ')'
   70          | DEREF '(' . deref_var ')'

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 84
    ref_var    ir ao estado 45
    deref_var  ir ao estado 86
    var        ir ao estado 87
    literal    ir ao estado 48


Estado 63

   52 exp: exp . AND exp
   53    | exp . OR exp
   54    | NOT exp .
   55    | exp . COMPARISON exp
   56    | exp . SUM exp
   57    | exp . MINUS exp
   58    | exp . DIV exp
   59    | exp . MULT exp
   60    | exp . EX exp
   72 var: exp . '.' NAME

    COMPARISON  deslocar, e ir ao estado 66
    SUM         deslocar, e ir ao estado 67
    MINUS       deslocar, e ir ao estado 68
    MULT        deslocar, e ir ao estado 69
    DIV         deslocar, e ir ao estado 70
    EX          deslocar, e ir ao estado 71
    '.'         deslocar, e ir ao estado 72

    $padrão  reduzir usando a regra 54 (exp)


Estado 64

   53 exp: exp OR . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 88
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 65

   52 exp: exp AND . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 89
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 66

   55 exp: exp COMPARISON . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 90
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 67

   56 exp: exp SUM . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 91
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 68

   57 exp: exp MINUS . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 92
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 69

   59 exp: exp MULT . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 93
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 70

   58 exp: exp DIV . exp

    NAME            deslocar, e ir ao estado 32
    '('             deslocar, e ir ao estado 33
    NEW             deslocar, e ir ao estado 34
    REF             deslocar, e ir ao estado 35
    DEREF           deslocar, e ir ao estado 36
    INT_LITERAL     deslocar, e ir ao estado 37
    FLOAT_LITERAL   deslocar, e ir ao estado 38
    STRING_LITERAL  deslocar, e ir ao estado 39
    BOOL_LITERAL    deslocar, e ir ao estado 40
    NULLVAL         deslocar, e ir ao estado 41
    NOT             deslocar, e ir ao estado 42

    call_stmt  ir ao estado 43
    exp        ir ao estado 94
    ref_var    ir ao estado 45
    deref_var  ir ao estado 46
    var        ir ao estado 47
    literal    ir ao estado 48


Estado 71

   60 exp: exp EX . exp
